# Second-Brain

./: CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
extension/: background.js  content.js  fullpage.css  fullpage.html  library.css  library.html  library.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js  sidepanel.css  sidepanel.html  sidepanel.js
extension/lib/: katex.min.css
src/: App.css  App.jsx  index.css  main.jsx
src-electron/: db.js  main.js  ollama.js  preload.js  server.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  ollama.rs  server.rs
src/components/: ArticleCard.jsx  ArticleGrid.jsx  ChatInterface.jsx  KnowledgeGraph.jsx  LottieIcons.jsx  ModelSelector.jsx  OllamaSetup.jsx  Sidebar.jsx  Timeline.jsx  VisualGraphView.jsx
src/pages/: ChatPage.jsx  DashboardPage.jsx  GraphPage.jsx  SettingsPage.jsx  TimelinePage.jsx
src/services/: api.js
