[package]
name = "internet-memory"
version = "0.1.0"
description = "Internet Memory — Your Second Brain for the Web"
authors = ["Kuntal"]
edition = "2021"

[lib]
name = "internet_memory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
auto-launch = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
axum = "0.7"
async-stream = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
scraper = "0.19"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
